removed pad bottom from nav-collapse. was making mobile meenu 'jumpy' and created an alignmnt bug for desktop views. hopefully this fixes w/o creating new problems

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -111,7 +111,7 @@
 .navbar-collapse {
     border-top: 0;
     box-shadow: none !important;
-    padding-bottom: 20px;
+    // padding-bottom: 20px;
 }
 
 #nav-row{
